--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "qpidfile"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
 edition = "2018"
+license = "0BSD"
+keywords = [ "pidfile" ]
+repository = "https://github.com/openqrnch/qpidfile"
 
 [dependencies]
